2010-01-28  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2939874 ] Serious provider id mismatch after provider reload

2010-01-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	[ 2937577 ] Some SLP-specific code not ifdef'd

2010-01-21 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, indCIMXMLExport.c
	[ 2935931 ] Indications to file:// urls never fail.

2010-01-18  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.h, providerRegister.c, providerMgr.c:
	[ 2934540 ] sfcb may respond with incorrect association provider

2010-01-15 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* providerRegister.c
	[ 2932809 ] sfcb 1.3.6 crashes when provider user is set to sfcb
	(patch by dmacvicar)

2010-01-15  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 2933087 ] Small leak in cimXmlRequest:getProperty()

2009-01-13 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2891367 ] Error processing content-length

2009-12-30  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c:
	[ 2923826 ] Leak on XML generation if including qualifiers

	* elementCapabilitiesProvider.c, 20_indication.mof, Makefile.am, 
	  default.reg.in, interopServerProvider.c, 
	  test/xmltest/ECTP_RI_IS.lines, 
	  test/xmltest/enumerateinstancenames.CIM_IndicationService.lines:
	[ 2922610 ] IndicationProfile: CIM_ElementCapabilities
	(patch by Sean Swehla)


	* Makefile.am:
	[ 2923885 ] Makefile.am has some minor omissions
	
2009-12-28 Pratyusha Doddapaneni <pratyusha.d@in.ibm.com>

	* enumerateInstance_CIM_IndicationService.lines, SAE_03_AI-IF.lines:

	[ 2908425 ] IndicationProfile: Reliable Indications, removal 
	(Fixing test failures)

2009-12-24 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* indCIMXMLHandler.c, 10_interop.mof:
	[ 2908425 ] IndicationProfile: Reliable Indications, removal 

2009-12-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
